<resources>
    <string name="app_name">RoleManagement</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="characters">Personajes</string>
    <string name="home">Inicio</string>
    <string name="title_activity_character">Nuevo Personaje</string>
    <string name="character_name">Nombre</string>
    <string name="character_age">Edad</string>
    <string name="character_hostile_attitude">Actitud hostil</string>
    <string name="character_indifferent_attitude">Actitud indiferente</string>
    <string name="character_friendly_attitude">Actitud amistosa</string>
    <string name="character_strengths">Fortalezas</string>
    <string name="character_weaknesses">Debilidades</string>
    <string name="character_tab_general">GENERAL</string>
    <string name="settlements">Asentamientos</string>
    <string name="professions">Oficios</string>
    <string name="title_activity_settlement">Nuevo Asentamiento</string>
    <string name="action_settings">Settings</string>
    <string name="settlement_name">Nombre</string>
    <string name="settlement_population">Población</string>
    <string name="insert_button">GUARDAR</string>
    <string name="update_button">MODIFICAR</string>
    <string name="profession_name">Nombre</string>
    <string name="profession_duties">Responsabilidades</string>
    <string name="title_activity_profession">Nuevo Oficio</string>
    <string name="character_relation_judgement">Perspectiva</string>
    <string name="title_activity_character_relation">Relaciones del Personaje</string>
    <string name="title_activity_character_relation_creation">Nueva Relación</string>
    <string name="delete">Eliminar</string>
    <string name="edit">Modificar</string>
    <string name="relationships">Relaciones</string>
    <string name="select">Seleccionar</string>
    <string name="title_activity_campaign">Nueva Campaña</string>
    <string name="campaigns">Campañas</string>

    <string-array name="type_names">
        <item>Aldea</item>
        <item>Pueblo</item>
        <item>Ciudad</item>
    </string-array>
</resources>
