<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/fragmentHome"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/fragmentCharacter"
            android:icon="@drawable/ic_character_black_24dp"
            android:title="@string/characters" />
        <item
            android:id="@+id/fragmentSettlement"
            android:icon="@drawable/ic_settlement_black_24dp"
            android:title="@string/settlements" />
        <item
            android:id="@+id/fragmentProfession"
            android:icon="@drawable/ic_profession_black_24dp"
            android:title="@string/professions" />
    </group>

</menu>
